Add spaces for quick chart analysis.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 			<div class="row djh-main">
 				<div class="col-12">
 
+					<h1>Chart analysis</h1>
+					<h3><div id="currentTitle" style="display:inline-block"></div></h3>
+					<i><div id="currentSubtitle" style="display:inline-block"></div></i>
+					<br>
+					<br>
+					<h2>BPMs</h2>
+					<div id="currentBPM" style="display:inline-block"></div>
+					<h2>Cues</h2>
+					<div id="currentBPM" style="display:inline-block"></div>
+
 					<!-- In-game -->
 
 					<h1>Configuration</h1>
