--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<br>
 					<div style="text-align:center"><b>File to convert...</b></div>
 					<br>
-					<input type="file" id="input" name="input" accept="text/srtb">
+					<input type="file" id="input" name="input" accept="text/srtb" onchange="quickCheck()">
 					<br>
 				</div>
 			</div>
