Add and finalise chart analysis

--- a/index.html
+++ b/index.html
@@ -53,11 +53,15 @@
 					<h3><div id="currentTitle" style="display:inline-block"></div></h3>
 					<i><div id="currentSubtitle" style="display:inline-block"></div></i>
 					<br>
+					<i><div id="currentArtist" style="display:inline-block"></div></i>
+					<br>
+					<b>Offset: </b><i><div id="currentOffset" style="display:inline-block"></div></i>
+					<br>
 					<br>
 					<h2>BPMs</h2>
-					<div id="currentBPM" style="display:inline-block"></div>
+					<div id="currentBPMs" style="display:inline-block"></div>
 					<h2>Cues</h2>
-					<div id="currentBPM" style="display:inline-block"></div>
+					<div id="currentCues" style="display:inline-block"></div>
 
 					<!-- In-game -->
 
