Add warnings system for negative bpms.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 					<b>Offset: </b><i><div id="currentOffset" style="display:inline-block"></div></i>
 					<br>
 					<br>
+					<h2>Warnings</h2>
+					<div id="currentWarnings" style="display:inline-block"></div>
+					<br>
+					<br>
 					<h2>BPMs</h2>
 					<div id="currentBPMs" style="display:inline-block"></div>
 					<h2>Cues</h2>
