--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="index.css">
 		<script src="converters/srtb.js" type="text/javascript"></script>
 		<script src="converters/sm.js" type="text/javascript"></script>
+		<script src="converters/chart.js" type="text/javascript"></script>
 		<script src="index.js" type="text/javascript"></script>
 		<script src="FileSaver.js"></script>
 	</head>
