Add CG5 to footer.

--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@
 
 					<button type="button" onclick="output()">Generate</button>
 					<br><br>
-					<div class="smalltext"><i>Chronomia has been made possible due to the efforts of: 
-						<a href="https://twitter.com/lavendertgreat"><b>Lavenfurr (Website creator)</b></a>
+					<div class="smalltext"><i>Chronomia has been made possible due to the efforts of:
+						<a href="https://twitter.com/lavendertgreat"><b>Lavenfurr (Website creator)</b></a>,
+						<a href="https://github.com/cg5-"><b>CG5 (Clone hero support)</b></a>
 					</i>
 					</i>
 
