Add chart to info header.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="row djh-main">
 				<div class="col-12">
 					<br>
-					Can convert timings from SM and Osu files to SRTB files required for Spin Rhythm XD, at least for now. 
+					Can convert timings from SM, .chart and Osu files to SRTB files required for Spin Rhythm XD, at least for now. 
 					<br>
 					<br>
 					Please check out the <a href="https://github.com/LavenderTheGreat/chronomia/blob/master/README.md">progress tracker!</a>
