Add Osu! converter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="converters/srtb.js" type="text/javascript"></script>
 		<script src="converters/sm.js" type="text/javascript"></script>
 		<script src="converters/chart.js" type="text/javascript"></script>
+		<script src="converters/osu.js" type="text/javascript"></script>
 		<script src="index.js" type="text/javascript"></script>
 		<script src="FileSaver.js"></script>
 	</head>
